# shuttlings-cch24

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20241219145134_init_db.down.sql  20241219145134_init_db.up.sql
src/: main.rs
src/challenges/: challenge0.rs  challenge12.rs  challenge16.rs  challenge19.rs  challenge2.rs  challenge23.rs  challenge5.rs  challenge9.rs  mod.rs
